--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
         "prettier": "^3.2.5"
     },
     "dependencies": {
-        "express": "^4.19.2"
+        "discord.js": "^14.14.1",
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2",
+        "openai": "^4.33.0"
     }
 }
